--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,7 +51,9 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt list --installed | grep php
+        sudo apt purge libapache2-mod-php
         sudo apt-get install -y apache2 \
+                                libapache2-mod-php
                                 php8.1 \
                                 php-bcmath \
                                 php-curl \
