--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,9 +51,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt list --installed | grep php
-        sudo apt purge libapache2-mod-php
+        sudo apt purge libapache2-mod-php8.1 libapache2-mod-php
         sudo apt-get install -y apache2 \
                                 libapache2-mod-php
+                                libapache2-mod-php8.1
                                 php8.1 \
                                 php-bcmath \
                                 php-curl \
