--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,11 +50,19 @@ jobs:
     - name: Install server packages
       run: |
         sudo apt-get update
+
+        echo -e "\e[96m Installing apache  \e[39m"
+        sudo apt-get -y install apache2
+
+        INSTALL_PHP_VER=${1:-8.1}
+
+        echo -e "\e[96m Installing php - ${INSTALL_PHP_VER} \e[39m"
+        sudo apt-get -y install "php${INSTALL_PHP_VER}-cli" "libapache2-mod-php${INSTALL_PHP_VER}"
+
+        echo -e "\e[96m Installing php extensions \e[39m"
+
         sudo apt list --installed | grep php
-        sudo apt purge libapache2-mod-php8.1 libapache2-mod-php
         sudo apt-get install -y apache2 \
-                                libapache2-mod-php
-                                libapache2-mod-php8.1
                                 php8.1 \
                                 php-bcmath \
                                 php-curl \
