--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,7 +52,7 @@ jobs:
         sudo apt-get update
         sudo apt list --installed | grep php
         sudo apt-get install -y apache2 \
-                                php8.1 \
+                                php \
                                 php-bcmath \
                                 php-curl \
                                 php-intl \
