--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,9 +51,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt list --installed | grep php
-        # 57MB uninstall, but needed to get libapache2-mod-php, and reinstall comes to 30MB
-        sudo apt purge libapache2-mod-php8.1 libapache2-mod-php php8.1-common php-common
-        sudo apt-get install -y apache2 \
+        # 57MB purge, but necessary to get libapache2-mod-php, and reinstall
+        # comes to 30MB if choosing php8.1-fpm, or 24.3MB for php8.1.
+        sudo apt remove libapache2-mod-php8.1 libapache2-mod-php php8.1-common php-common
+        sudo apt-get remove -y apache2 \
                                 php8.1 \
                                 libapache2-mod-php \
                                 php-bcmath \
@@ -91,24 +92,12 @@ jobs:
         sudo cp ssl-params.conf /etc/apache2/conf-available/ssl-params.conf
         sudo cp wordpress.conf /etc/apache2/sites-available/wordpress.conf
         sudo a2enmod ssl
-
-        sudo apache2ctl -M
-
-        sudo a2enmod php8.1
         sudo a2enmod headers
         sudo a2enmod rewrite
         sudo a2ensite wordpress
         sudo a2enconf ssl-params
         sudo a2dissite 000-default
         sudo systemctl start apache2
-        sudo apache2ctl -M
-        # We're not seeing php module at /etc/apache2/mods-enabled/php, so worry
-        sudo systemctl status apache2
-        sleep 2
-        sudo systemctl status apache2
-        sudo systemctl reload apache2
-        sudo systemctl restart apache2
-        sudo apache2ctl -M
 
     - name: Setup UFW
       run: |
