--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -53,9 +53,9 @@ jobs:
         sudo apt list --installed | grep php
         # 57MB purge, but necessary to get libapache2-mod-php, and reinstall
         # comes to 30MB if choosing php8.1-fpm, or 24.3MB for php8.1.
-        sudo apt remove libapache2-mod-php8.1 libapache2-mod-php php8.1-common php-common
+        sudo apt purge libapache2-mod-php8.1 libapache2-mod-php php8.1-common php-common
         sudo apt-get install -y apache2 \
-                                php8.1 \
+                                php \
                                 libapache2-mod-php \
                                 php-bcmath \
                                 php-curl \
@@ -68,9 +68,10 @@ jobs:
 
     - name: Check MySQL
       run: |
-        sudo systemctl enable mysql.service
+        # sudo systemctl enable mysql.service
+        # It's disabled by default, use `start` to use it.
         sudo systemctl start mysql.service
-        sudo systemctl status mysql.service
+        # sudo systemctl status mysql.service
 
     - name: Initialise WordPress and MySQL
       run: |
