--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -157,3 +157,7 @@ jobs:
         cd tests
         PYTHONPATH=../ss_img_shrinker coverage report -m --fail-under=90
 
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
