--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -168,8 +168,7 @@ jobs:
 
     - name: Test coverage
       run: |
-        cd tests
-        PYTHONPATH=../ss_img_shrinker coverage report -m --fail-under=90
+        coverage report -m --fail-under=90
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
