--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -170,6 +170,7 @@ jobs:
       run: |
         cd tests
         PYTHONPATH=../ss_img_shrinker coverage report -m --fail-under=90
+        coverage xml
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
